Fix broken carousel - align images and text over images.

--- a/29. Bootstrap 4 Site Files/Bootstrap 4 Site Files/style.css
+++ b/29. Bootstrap 4 Site Files/Bootstrap 4 Site Files/style.css
@@ -20,24 +20,23 @@ body {
   font-size: 1.1em !important;
 }
 
+.carousel-inner,
+.carousel-item {
+  height: 60vh;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .carousel-caption {
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  transform: translate(-50%, 50%);
-}
-
-.carousel-caption h3 {
-  font-size: 3rem;
-  font-weight: 600;
-  color: white;
-  padding: 1rem;
 }
 
 .carousel-caption h1 {
@@ -173,8 +172,36 @@ hr.light-100 {
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
+  .social a {
+    font-size: 4em;
+    padding: 2rem;
+  }
 }
+
 @media (max-width: 768px) {
+  .carousel-item {
+    position: relative;
+  }
+
+  .carousel-caption {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .carousel-caption h1 {
+    font-size: 350%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 140%;
+    font-weight: 400;
+    padding-bottom: 0.2rem;
+  }
 }
 @media (max-width: 576px) {
 }
